--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: 'Invader';
-    src: url(../fonts/Invader.ttf);
+    src: url(../fonts/Invader.TTF);
 }
 
 /* General Content
