--- a/css/style.css
+++ b/css/style.css
@@ -84,10 +84,44 @@ _______________________________________________*/
 
 .nav li:hover .nav-content {
     display: block;
+    z-index: 9999;
 }
 
 /* Images
 _______________________________________________*/
 
+/* Side Bar
+_______________________________________________*/
+aside {
+    background-color: #808080;
+	border: solid #2D043B;
+	border-width: 3px 12px 12px 3px;
+	height: 800px;
+	width: 230px;
+	margin-right: 20px;
+	margin-top: 30px;
+	padding: 10px;
+	font-family: sans-serif;
+}
+
 /* Footer
 _______________________________________________*/
+footer {
+    width: 100%;
+    background-color: #422652;
+    border-top: 3px solid #2D043B;
+    margin-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    text-align: center;
+    color: white;
+}
+
+
+/* Media Queries
+_______________________________________________*/
+@media screen and (max-width: 767px) {
+    .nav li:hover .nav-content {
+        display: none;
+    }
+}
