--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ body {
 }
 
 .other_areas ul a:hover {
-    color: limegreen;
+    color: #4dff4d;
     text-shadow: 0 0 15px #1aff1a;
     transition: 200ms;
 }
