--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,13 @@ _______________________________________________*/
 
 /* Images
 _______________________________________________*/
+.info_buttons {
+    width: 100%;
+    border-radius: 20px;
+    border: solid 3px #2D043B;
+    border-width: 3px 12px 12px 3px;
+    margin-bottom: 20px;
+}
 
 /* Side Bar
 _______________________________________________*/
