Lots of links fixed. new page added

--- a/css/resisty.css
+++ b/css/resisty.css
@@ -251,8 +251,8 @@ h2 span {
 _______________________________________________*/
 footer {
     width: 100%;
-    background-color: #422652;
-    border-top: 3px solid #2D043B;
+    background-color: #262752;
+    border-top: 3px solid #04043b;
     padding: 15px;
     text-align: center;
     color: white;
